--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -459,12 +459,44 @@ console.log(result);
 
 给定一个数组 `nums`，编写一个函数将所有 `0` 移动到数组的末尾，同时保持非零元素的相对顺序。
 
+**说明**:
+
+1. 必须在原数组上操作，不能拷贝额外的数组。
+2. 尽量减少操作次数。
+
 ```
 输入: [0,1,0,3,12]
 输出: [1,3,12,0,0]
 ```
 
-```
+```js
+/**
+ * @param {number[]} nums
+ * @return {void} Do not return anything, modify nums in-place instead.
+ */
+var moveZeroes = function(nums) {
+    let flag1=nums.length-1;  //标识最后的最后一个非0的位置
+    for (let i=nums.length-1;i>=0;i--) {
+        if (nums[i]===0) {
+            if (i!==flag1) {
+                for (let j=i;j<flag1;j++){
+                    nums[j]=nums[j+1];
+                }
+                nums[flag1]=0;
+                flag1--;
+            }else{
+                flag1--;
+            }
+        }
+    }
+    return nums;
+};
+
+let str1 = [2, 4, 0, 5, 0,5, 0, 9,0];
+let str2 = [9, 9, 9 ];
+let result=moveZeroes(str1);
+//console.log(typeof result);
+console.log(result);
 
 ```
 
