--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -1215,7 +1215,7 @@ var obj = {
 
 ## **FED49** **JS动态创建节点**
 
-## 描述
+
 
 请补全JavaScript函数，根据参数数组创建li元素。
 要求：
@@ -1223,7 +1223,441 @@ var obj = {
 \2. li元素的内容是数组中的每个元素
 \3. 将创建的所有li元素插入到ul中
 
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+    </head>
+    <body>
+        <ul></ul>
+    </body>
+    <script type="text/javascript">
+        function createLi(array){
+            // 补全代码
+            var element=document.querySelector("ul");
+             for (let i = 0; i < array.length; i++) {
+                let li=document.createElement("li");
+                let node=document.createTextNode(array[i]);
+                li.appendChild(node);
+                element.appendChild(li);
+             }
+        }
+    </script>
+</html>
 ```
+
+## **FED50** **根据ID获取元素**
+
+请补全JavaScript函数，根据id获取html模块中ul标签下第二个li元素并返回。
+
+```js
+function getLI(id){
+    // 补全代码
+    return document.getElementById(id);
+}
+function getLI(id){
+    // 补全代码
+    return document.querySelector("#"+id);
+}
+```
+
+## **FED51** **JS修改元素内容**
+
+请补全JavaScript函数，将类为"box"的div元素内容修改为"欢迎来到牛客网"。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+    </head>
+    <body>
+        <div class='box'></div>
+    </body>
+    <script type="text/javascript">
+        function modifyText(){
+            // 补全代码
+            document.getElementsByClassName("box")[0].innerHTML="欢迎来到牛客网";
+        }
+        function modifyText(){
+            // 补全代码
+            document.querySelector(".box").innerHTML="欢迎来到牛客网";
+        }
+    </script>
+</html>
+```
+
+## **FED52** **阻止冒泡事件**
+
+请补全JavaScript函数，要求在点击li元素的时候不触发ul的事件。
+注意：需要自行获取li元素。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+    </head>
+    <body>
+        <ul>
+            <li>nowcoder</li>
+        </ul>
+    </body>
+    <script type="text/javascript">
+        // 补全代码
+        let li=document.querySelector("li");
+        li.onclick=function(e){
+            e.stopPropagation();
+        }
+    </script>
+    <script type="text/javascript">
+        // 补全代码
+        let li=document.querySelector("li");
+        li.addEventListener("click",function(e){
+            e.stopPropagation();
+        });
+    </script>
+</html>
+```
+
+## **FED53** **阻止默认事件**
+
+请补全JavaScript函数，要求在点击id为"checkbox"的复选框时不会取消勾选状态。
+注意：需要自行获取input元素。
+
+```html
+<html>
+    <head>
+        <meta charset=utf-8>
+    </head>
+    <body>
+        <form>
+            <label>牛客会陪伴大家</label>
+            <input id="checkbox" type="checkbox" checked />
+        </form>
+    </body>
+    <script type="text/javascript">
+        // 补全代码
+        let element= document.getElementById("checkbox");
+        element.onclick=(e)=>e.preventDefault();
+    </script>
+</html>
+```
+
+## **FED54** **url地址**
+
+请补全JavaScript函数，实现一个函数返回页面当前url。
+
+```js
+function getUrlHref (){
+    // 补全代码
+    return window.location.href;
+}
+```
+
+window.location 对象可不带 window 前缀书写。
+
+一些例子：
+window.location.href 返回当前页面的 href (URL)
+window.location.hostname 返回 web 主机的域名
+window.location.pathname 返回当前页面的路径或文件名
+window.location.protocol 返回使用的 web 协议（http: 或 https:）
+window.location.assign 加载新文档
+
+## **FED55** **点击按钮隐藏元素**
+
+请补全JavaScript代码，实现一个盒子的关闭按钮功能。
+要求：
+\1. 使类为"btn"的div元素中心点定位在类为"box"的div元素右上顶点
+\2. 使类为"btn"的div元素中内容"X"垂直水平居中
+\3. 点击"X"按钮可以使类为"box"的div元素隐藏
+
+```html
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset=utf-8>
+        <style type="text/css">
+            .box {
+                width: 100px;
+                height: 100px;
+                border: solid 1px black;
+                /*补全代码*/
+                position: relative;
+            }
+            .btn{
+                width: 20px;
+                height: 20px;
+                background-color: red;
+                /*补全代码*/
+                position: absolute;
+                top: -10px;
+                right: -10px;
+                text-align: center;
+                line-height: 20px;
+            }
+        </style>
+    </head>
+    <body>
+
+        <div class='box'>
+            <div class='btn'>X</div>
+        </div>
+
+        <script type="text/javascript">
+            var btn = document.querySelector('.btn');
+            var box = document.querySelector('.box');
+            btn.onclick = function(){
+                // 补全代码
+                box.style.display="none";
+            }
+        </script>
+    </body>
+</html>
+```
+
+## **FED56** **数组求和**
+
+计算并返回给定数组 arr 中所有元素的总和。数组中的元素均为 Number 类型
+
+```js
+function sum(arr) {
+    for (let i=1;i<arr.length;i++){
+        arr[0]+=arr[i];
+    }
+    return arr[0];
+}
+
+let test=[1,3,4,5,6];
+let result=sum(test);
+console.log(result);
+//函数式编程 map-reduce：
+function sum(arr) {
+    return arr.reduce(function(previous,current,index,arr){
+        return previous+current;
+    })
+}
+//eval：
+function sum(arr) {
+    return eval(arr.join("+"));
+}
+//
+```
+
+## **FED57** **移除数组中的元素**
+
+移除数组 arr 中的所有值与 item 相等的元素。不要直接修改数组 arr，结果返回新的数组
+
+```js
+function remove(arr, item) {
+    let newArr=[];
+    for(let i = 0; i < arr.length; i ++){
+        if(arr[i] !== item){
+            newArr.push(arr[i])
+        }  
+    }
+    return newArr;
+}
+
+function remove(arr, item) {
+    return arr.filter((a)=>a!==item);
+}
+
+let test=[1,3,4,5,3,6];
+let result=remove(test,3);
+console.log(result);
+```
+
+## **FED58** **移除数组中的元素**
+
+移除数组 arr 中的所有值与 item 相等的元素，直接在给定的 arr 数组上进行操作，并将结果返回
+
+```js
+function removeWithoutCopy(arr, item) {
+    for(let i = arr.length; i >=0; i--){
+        if(arr[i] === item){
+            //splice() 方法向/从数组中添加/删除项目，然后返回被删除的项目。
+            arr.splice(i,1);
+        }  
+    }
+    return arr;
+}
+
+let test=[1,3,4,5,3,6];
+let result=removeWithoutCopy(test,3);
+console.log(result);
 
 ```
 
+## **FED59** **数组末尾添加元素**
+
+在数组 arr 末尾添加元素 item。不要直接修改数组 arr，结果返回新的数组
+
+```js
+function append(arr, item) {
+    let newArr=[];
+    for(let i = 0; i < arr.length; i ++){
+            newArr.push(arr[i]);
+    }
+    newArr.push(item);
+    return newArr;
+}
+
+let test=[1,3,4,5,3,6];
+let result=append(test,3);
+console.log(result);
+
+//使用slice浅拷贝+push组合
+function append(arr, item) {
+    let newArr=arr.slice(0);
+    newArr.push(item);
+    return newArr;
+}
+/*concat() 方法用于连接两个或多个数组。该方法不会改变现有的数组，而仅仅会返回被连接数组的一个副本。*/
+function append(arr, item) {
+    return arr.concat(item);
+}
+```
+
+## **FED60** **删除数组最后一个元素**
+
+删除数组 arr 最后一个元素。不要直接修改数组 arr，结果返回新的数组
+
+```js
+
+//利用slice
+function truncate(arr) {
+    return arr.slice(0,-1);
+}
+//利用filter
+function truncate(arr) {
+    return arr.filter(function(v,i,ar) {
+        return i!==ar.length-1;
+    });
+}
+//利用push.apply+pop
+function truncate(arr) {
+    var newArr=[];
+    [].push.apply(newArr, arr);
+    newArr.pop();
+    return newArr;
+}
+//利用join+split+pop    注意！！！：数据类型会变成字符型
+function truncate(arr) {
+    var newArr = arr.join().split(',');
+    newArr.pop();
+    return newArr;
+}
+//利用concat+pop 
+function truncate(arr) {
+    var newArr = arr.concat();
+    newArr.pop();
+    return newArr;
+}
+//普通的迭代拷贝
+function truncate(arr, item) {
+    var newArr=[];
+    for(var i=0;i<arr.length-1;i++){
+        newArr.push(arr[i]);
+    }
+    return newArr;
+}
+```
+
+## **FED61** **数组头部添加元素**
+
+在数组 arr 开头添加元素 item。不要直接修改数组 arr，结果返回新的数组
+
+```js
+//
+function prepend(arr, item) {
+    let newArr=[];
+    newArr.push(item);
+    for(let i = 0; i < arr.length; i ++){
+        newArr.push(arr[i]);
+    }
+    return newArr;
+}
+//利用concat
+function prepend(arr, item) {
+    return [item].concat(arr);
+}
+//使用push.apply
+function prepend(arr, item) {
+    var newArr=[item];
+    [].push.apply(newArr, arr);
+    return newArr;
+}
+//利用slice+unshift/splice
+function prepend(arr, item) {
+    var newArr=arr.slice(0);
+    newArr.unshift(item);//newArr.splice(0,0,item);
+    return newArr;
+}
+//使用join+split+unshift/splice组合
+function prepend(arr, item) {
+    var newArr=arr.join().split(',');
+    newArr.unshift(item);//newArr.splice(0,0,item);
+    return newArr;
+}
+//普通的迭代拷贝
+function prepend(arr, item) {
+    var newArr=[];
+    for(var i=0;i<arr.length;i++){
+        newArr.push(arr[i]);
+    }
+    newArr.unshift(item);
+    return newArr;
+}
+```
+
+## **FED62** **删除数组第一个元素**
+
+删除数组 arr 第一个元素。不要直接修改数组 arr，结果返回新的数组
+
+```js
+function curtail(arr) {
+    let newArr=[];
+    for(let i = 1; i < arr.length; i ++){
+        newArr.push(arr[i]);
+    }
+    return newArr;
+}
+//利用slice
+function curtail(arr) {
+    return arr.slice(1);
+}
+//利用filter
+function curtail(arr) {
+    return arr.filter(function(v,i) {
+        return i!==0;
+    });
+}
+//利用push.apply+shift
+function curtail(arr) {
+    var newArr=[];
+    [].push.apply(newArr, arr);
+    newArr.shift();
+    return newArr;
+}
+//利用join+split+shift    注意！！！：数据类型会变成字符型
+function curtail(arr) {
+    var newArr = arr.join().split(',');
+    newArr.shift();
+    return newArr;
+}
+//利用concat+shift 
+function curtail(arr) {
+    var newArr = arr.concat();
+    newArr.shift();
+    return newArr;
+}
+//普通的迭代拷贝
+function curtail(arr) {
+    var newArr=[];
+    for(var i=1;i<arr.length;i++){
+        newArr.push(arr[i]);
+    }
+    return newArr;
+}
+```
+
+## **FED63** **数组合并**
