--- a/力扣初级算法.md
+++ b/力扣初级算法.md
@@ -500,6 +500,154 @@ console.log(result);
 
 ```
 
+### 9. 两数之和
+
+给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
+
+你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+
+你可以按任意顺序返回答案。
+
+**进阶：**你可以想出一个时间复杂度小于 `O(n2)` 的算法吗？
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum =function(nums,target){
+    len_nums=nums.length;
+    for (let i=0; i<len_nums-1; i++){
+        for (let j=i+1; j<len_nums; j++){
+            if (nums[i]+nums[j]==target) {
+                return [i,j];
+            }
+        }
+    }
+};
+
+let str1 = [2, 4, 0, 5, 0,5, 0, 9,0];
+let str2 = [9, 9, 9 ];
+let result=twoSum(str1,6);
+//console.log(typeof result);
+console.log(result);
+```
+
+### 10. 有效的数独
+
+请你判断一个 9 x 9 的数独是否有效。只需要 根据以下规则 ，验证已经填入的数字是否有效即可。
+
+数字 1-9 在每一行只能出现一次。
+数字 1-9 在每一列只能出现一次。
+数字 1-9 在每一个以粗实线分隔的 3x3 宫内只能出现一次。（请参考示例图）
+
+
+注意：
+
+一个有效的数独（部分已被填充）不一定是可解的。
+只需要根据以上规则，验证已经填入的数字是否有效即可。
+空白格用 '.' 表示。
+
+**提示：**
+
+- `board.length == 9`
+- `board[i].length == 9`
+- `board[i][j]` 是一位数字（`1-9`）或者 `'.'`
+
+```js
+/**
+ * @param {character[][]} board
+ * @return {boolean}
+ */
+var isValidSudoku = function(board) {
+    for (let i=0; i<9; i++){
+        for (let j=0; j<9; j++){
+            if (board[i][j]!==".") {
+                for(let k=j+1;k<9;k++){
+                    if (board[i][j]===board[i][k]) {
+                        return false;
+                    }
+                }
+                for(let k=i+1;k<9;k++){
+                    if (board[i][j]===board[k][j]) {
+                        return false;
+                    }
+                }
+                let start1=Math.floor(i/3)*3;
+                let start2=Math.floor(j/3)*3;
+                for (let m=start1;m<start1+3;m++){
+                    for (let n=start2;n<start2+3;n++){
+                        if (i!==m && j!==n) {
+                            if (board[i][j]===board[m][n]){
+                                return false;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    return true;
+};
+
+let str1 = [["5","3",".",".","7",".",".",".","."]
+,["6",".",".","1","9","5",".",".","."]
+,[".","9","8",".",".",".",".","6","."]
+,["8",".",".",".","6",".",".",".","3"]
+,["4",".",".","8",".","3",".",".","1"]
+,["7",".",".",".","2",".",".",".","6"]
+,[".","6",".",".",".",".","2","8","."]
+,[".",".",".","4","1","9",".",".","5"]
+,[".",".",".",".","8",".",".","7","9"]];
+
+let result=isValidSudoku(str1);
+//console.log(typeof result);
+console.log(result);
+
+```
+
+### 11. 旋转图像
+
+给定一个 n × n 的二维矩阵 matrix 表示一个图像。请你将图像顺时针旋转 90 度。
+
+你必须在 原地 旋转图像，这意味着你需要直接修改输入的二维矩阵。请不要 使用另一个矩阵来旋转图像。
+
+提示：
+
+matrix.length == n
+matrix[i].length == n
+1 <= n <= 20
+-1000 <= matrix[i][j] <= 1000
+
+```js
+/**
+ * @param {number[][]} matrix
+ * @return {void} Do not return anything, modify matrix in-place instead.
+ */
+var rotate = function(matrix) {
+    let n=matrix.length;
+    let m=Math.floor(n/2-0.1)+1;
+    let temp;
+    for (let i=0; i<m; i++){
+        for (let j=0; j<m; j++){
+            temp=matrix[i][j];
+            matrix[i][j]=matrix[j][n-i];
+            matrix[]
+
+        }
+    }
+    return matrix;
+};
+
+let str1 = [[5,1,9,11],[2,4,8,10],[13,3,6,7],[15,14,12,16]];
+
+let result=isValidSudoku(str1);
+//console.log(typeof result);
+console.log(result);
+
+```
+
 
 
 
