--- a/牛客前端基础编程题.md
+++ b/牛客前端基础编程题.md
@@ -1661,3 +1661,349 @@ function curtail(arr) {
 ```
 
 ## **FED63** **数组合并**
+
+合并数组 arr1 和数组 arr2。不要直接修改数组 arr，结果返回新的数组
+
+```js
+function concat(arr1, arr2) {
+    let newArr=[];
+    for(let i = 0; i < arr1.length; i ++){
+        newArr.push(arr1[i]);
+    }
+    for(let i = 0; i < arr2.length; i ++){
+        newArr.push(arr2[i]);
+    }
+    return newArr;
+}
+
+let test=[1,3,4,5,3,6];
+let test2=[1,3,4,5,3,6];
+let result=concat(test,test2);
+console.log(result);
+
+//利用concat
+function concat(arr1, arr2) {
+    return arr1.concat(arr2);
+}
+//利用slice+push.apply 
+function concat(arr1, arr2) {
+    var newArr=arr1.slice(0);
+    [].push.apply(newArr, arr2);
+    return newArr;
+}
+//利用slice+push 
+function concat(arr1, arr2) {
+    var newArr=arr1.slice(0);
+    for(var i=0;i<arr2.length;i++){
+        newArr.push(arr2[i]);
+    }
+    return newArr;
+}
+//普通的迭代拷贝
+function concat(arr1, arr2) {
+    var newArr=[];
+    for(var i=0;i<arr1.length;i++){
+        newArr.push(arr1[i]);
+    }
+    for(var j=0;j<arr2.length;j++){
+        newArr.push(arr2[j]);
+    }
+    return newArr;
+}
+//ES6
+function concat(arr1, arr2) {
+    return [...arr1,...arr2];
+}
+```
+
+## **FED64** **添加元素**
+
+在数组 arr 的 index 处添加元素 item。不要直接修改数组 arr，结果返回新的数组
+
+```js
+function insert(arr, item, index) {
+    let newArr=[];
+    for(let i=0;i<arr.length;i++){
+        if (i===index) {
+            newArr.push(item);
+        }
+        newArr.push(arr[i]);
+    }
+    return newArr;
+}
+function insert(arr, item, index) {
+    let newArr=[];
+    for(let i=0;i<arr.length;i++){
+        newArr.push(arr[i]);
+    }
+    newArr.splice(index,0,item);
+    return newArr;
+}
+
+let test=[1,3,4,5,3,6];
+let result=insert(test,'a',3);
+console.log(result);
+
+//利用slice+concat
+function insert(arr, item, index) {
+    return arr.slice(0,index).concat(item,arr.slice(index));
+}
+//利用concat +splice
+function insert(arr, item, index) {
+    var newArr=arr.concat();
+    newArr.splice(index,0,item);
+    return newArr;
+}
+//利用slice+splice
+function insert(arr, item, index) {
+    var newArr=arr.slice(0);
+    newArr.splice(index,0,item);
+    return newArr;
+}
+//利用push.apply+splice
+function insert(arr, item, index) {
+    var newArr=[];
+    [].push.apply(newArr, arr);
+    newArr.splice(index,0,item);
+    return newArr;
+}
+//普通的迭代拷贝
+function insert(arr, item, index) {
+    var newArr=[];
+    for(var i=0;i<arr.length;i++){
+        newArr.push(arr[i]);
+    }
+    newArr.splice(index,0,item);
+    return newArr;
+}
+```
+
+## **FED65** **求二次方**
+
+为数组 arr 中的每个元素求二次方。不要直接修改数组 arr，结果返回新的数组
+
+```js
+function square(arr) {
+    let newArr=[];
+    for(let i=0;i<arr.length;i++){
+        newArr.push(arr[i]*arr[i]);
+    }
+    return newArr;
+}
+
+let test=[1,3,4,5,3,6];
+let result=square(test);
+console.log(result);
+
+function square(arr) {
+    return arr.map((item)=>item*item);
+}
+```
+
+## **FED66** **查找元素位置**
+
+在数组 arr 中，查找值与 item 相等的元素出现的所有位置
+
+```js
+function findAllOccurrences(arr, target) {
+    let newArr=[];
+    for(let i=0;i<arr.length;i++){
+        if (arr[i]===target) {
+            newArr.push(i);
+        }
+    }
+    return newArr;
+}
+
+let test=[1,3,4,5,3,6];
+let result=findAllOccurrences(test,3);
+console.log(result);
+
+//filter
+function findAllOccurrences(arr, target) {
+    var result=[];
+    arr.filter(function(item,index){
+        return item===target&&result.push(index);
+    });
+    return result;
+}
+//for
+function findAllOccurrences(arr, target) {
+    var result=[];
+    for(var i=0;i<arr.length;i++){
+        if(arr[i]===target){
+            result.push(i);
+        }
+    }
+    return result;
+}
+//lastIndexOf+slice/splice
+function findAllOccurrences(arr, target) {
+    var result=[],index=arr.lastIndexOf(target);
+    while(index>-1){
+        result.push(index);
+        arr.splice(index,1);//arr=arr.slice(0,index);
+        index=arr.lastIndexOf(target);
+    }
+    return result;
+}
+//indexOf
+function findAllOccurrences(arr, target) {
+    var result=[],index=arr.indexOf(target);
+    while(index>-1){
+        result.push(index);
+        index=arr.indexOf(target,index+1);
+    }
+    return result;
+}
+```
+
+## **FED67** **避免全局变量**
+
+给定的 js 代码中存在全局变量，请修复
+
+```js
+function globals() {
+    var myObject = {
+      name : 'Jory'
+    };
+
+    return myObject;
+}
+
+function globals() {
+    let myObject = {
+      name : 'Jory'
+    };
+
+    return myObject;
+}
+```
+
+在Javascript语言中，声明变量使用的都是关键字var，如果不使用var而直接声明变量，则该变量为全局变量。
+
+## **FED68** **正确的使用 parseInt**
+
+修改 js 代码中 parseInt 的调用方式，使之通过全部测试用例
+
+```js
+function parse2Int(num) {
+    return parseInt(num,10);
+}
+```
+
+**parseInt(\*string\*, \*radix\*)**  解析一个字符串并返回指定基数的十进制整数， `radix` 是2-36之间的整数，表示被解析字符串的基数。
+
+## **FED69** **完全等同**
+
+判断 val1 和 val2 是否完全等同
+
+```js
+function identity(val1, val2) {
+    return val2===val1;
+}
+```
+
+```
+一般使用双等来判断（==），如果还需要类型相同那么就用三等（===）。
+说一下这两个的区别：
+== equality 等同，=== identity 恒等。
+==， 两边值类型不同的时候，要先进行类型转换，再比较。 
+==，不做类型转换，类型不同的一定不等。 
+下面分别说明： 
+先说 ===，这个比较简单。下面的规则用来判断两个值是否===相等： 
+1、如果类型不同，就[不相等] 
+2、如果两个都是数值，并且是同一个值，那么[相等]。
+3、如果两个都是字符串，每个位置的字符都一样，那么[相等]；否则[不相等]。 
+4、如果两个值都是true，或者都是false，那么[相等]。 
+5、如果两个值都引用同一个对象或函数，那么[相等]；否则[不相等]。 
+6、如果两个值都是null，或者都是undefined，那么[相等]。 
+再说 ==，根据以下规则： 
+1、如果两个值类型相同，进行 === 比较。 
+2、如果两个值类型不同，他们可能相等。根据下面规则进行类型转换再比较： 
+a、如果一个是null、一个是undefined，那么[相等]。 
+b、如果一个是字符串，一个是数值，把字符串转换成数值再进行比较。 
+c、如果任一值是 true，把它转换成 1 再比较；如果任一值是 false，把它转换成 0 再比较。 
+d、任何其他组合，都[不相等]。
+```
+
+## **FED70** **或运算**
+
+返回参数 a 和 b 的逻辑或运算结果
+
+```js
+function or(a, b) {
+    return a || b;
+}
+```
+
+## **FED71** **且运算**
+
+返回参数 a 和 b 的逻辑且运算结果
+
+```js
+function and(a, b) {
+    return a && b;
+}
+```
+
+## **FED72** **字符串字符统计**
+
+统计字符串中每个字符的出现频率，返回一个 Object，key 为统计字符，value 为出现频率
+\1. 不限制 key 的顺序
+\2. 输入的字符串参数不会为空
+\3. 忽略空白字符
+
+```js
+function count(str) {
+    let obj={};
+    for(let i=0;i<str.length;i++){
+        if (str[i]!==" ") {
+            obj[str[i]]=obj[str[i]] ? ++obj[str[i]] : 1;
+        }
+    }
+    return obj;
+}
+
+let test='hello world';
+let result=count(test);
+console.log(result);
+
+function count(str) {
+  //去除空白字符处理
+  str = str.replace(/\s*/g,'');
+  //统计词频
+  let arr = [...str];
+  let res = arr.reduce(function(prev,cur){
+    prev[cur] ? prev[cur]++ : prev[cur]=1;
+    return prev;
+  },{})
+  return res;
+}
+```
+
+## **FED73** **加粗文字**
+
+使用一个标签将“牛客网”三个字加粗显示
+
+```html
+<p><b>牛客网</b>，程序员必备求职神器</p>
+```
+
+## **FED74** **段落标识**
+
+```html
+<p>牛客网是一个专注于程序员的学习和成长的专业平台。</p>
+```
+
+## **FED75** **设置文字颜色**
+
+```html
+<p style="color:red">欢迎来到牛客网</p>
+<p style="color:red"> 在这里，我们为你提供了IT名企的笔试面试题库</p>
+<p style="color:red"> 在这里，我们以题会友</p>
+<p style="color:red">欢迎来到牛客网</p>
+<p style="color:red"> 在这里，我们为你提供了IT名企的笔试面试题库</p>
+<p style="color:red"> 在这里，我们以题会友</p>
+```
+
