--- a/算法/力扣算法.md
+++ b/算法/力扣算法.md
@@ -1,3 +1,41 @@
+
+
+## 1.两数之和
+
+给定一个整数数组 nums 和一个整数目标值 target，请你在该数组中找出 和为目标值 target  的那 两个 整数，并返回它们的数组下标。
+
+你可以假设每种输入只会对应一个答案。但是，数组中同一个元素在答案里不能重复出现。
+
+你可以按任意顺序返回答案。
+
+**进阶：**你可以想出一个时间复杂度小于 `O(n2)` 的算法吗？
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} target
+ * @return {number[]}
+ */
+var twoSum =function(nums,target){
+    len_nums=nums.length;
+    for (let i=0; i<len_nums-1; i++){
+        for (let j=i+1; j<len_nums; j++){
+            if (nums[i]+nums[j]==target) {
+                return [i,j];
+            }
+        }
+    }
+};
+
+let str1 = [2, 4, 0, 5, 0,5, 0, 9,0];
+let str2 = [9, 9, 9 ];
+let result=twoSum(str1,6);
+//console.log(typeof result);
+console.log(result);
+```
+
+
+
 ## 2.两数相加
 
 给你两个 非空 的链表，表示两个非负的整数。它们每位数字都是按照 逆序 的方式存储的，并且每个节点只能存储 一位 数字。
@@ -73,7 +111,57 @@ var addTwoNumbers = function(l1, l2) {
 
 注意 当li.next()返回false后在后面的要计算当前位的值.
 
+## 3. 无重复字符的最长子串
 
+给定一个字符串 `s` ，请你找出其中不含有重复字符的 **最长子串** 的长度。
+
+**提示：**
+
+- `0 <= s.length <= 5 * 104`
+
+- `s` 由英文字母、数字、符号和空格组成
+
+- **例 1:**
+
+  ```
+  输入: s = "abcabcbb"
+  输出: 3 
+  解释: 因为无重复字符的最长子串是 "abc"，所以其长度为 3。
+  ```
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var lengthOfLongestSubstring = function(s) {
+    let maxLen=1;
+    let flag=true;
+    let count=1;
+    for (let i=0;i<s.length;i++){
+        for (let j=i+1;j<s.length;j++){
+            if (s[i]===s[j]) {
+                maxLen=count>maxLen ? count : maxLen;
+                flag=false;
+                count=1;
+                break;
+            }else{
+                count++;
+            }
+        }
+        if (flag) {
+            maxLen=count>maxLen ? count : maxLen;
+            break;
+        }
+    }
+    return maxLen;
+};
+
+
+let str1 = "heffdddllo";
+let result=lengthOfLongestSubstring(str1);
+console.log(result);
+```
 
 
 
