--- a/算法/力扣算法.md
+++ b/算法/力扣算法.md
@@ -111,6 +111,8 @@ var addTwoNumbers = function(l1, l2) {
 
 注意 当li.next()返回false后在后面的要计算当前位的值.
 
+
+
 ## 3. 无重复字符的最长子串
 
 给定一个字符串 `s` ，请你找出其中不含有重复字符的 **最长子串** 的长度。
@@ -135,17 +137,24 @@ var addTwoNumbers = function(l1, l2) {
  * @return {number}
  */
 var lengthOfLongestSubstring = function(s) {
+    if (s==="") {return 0;}
     let maxLen=1;
-    let flag=true;
+    let flag;
     let count=1;
+    let newArr=[];  //存储子串数组
     for (let i=0;i<s.length;i++){
+        newArr.push(s[i]);
+        flag=true;
         for (let j=i+1;j<s.length;j++){
-            if (s[i]===s[j]) {
+            if (newArr.includes(s[j])) {
+                //当子串数组中已有时
                 maxLen=count>maxLen ? count : maxLen;
                 flag=false;
                 count=1;
+                newArr=[];
                 break;
             }else{
+                newArr.push(s[j]);
                 count++;
             }
         }
@@ -158,8 +167,170 @@ var lengthOfLongestSubstring = function(s) {
 };
 
 
-let str1 = "heffdddllo";
+let str1 = "heflfdddswertllo";
 let result=lengthOfLongestSubstring(str1);
+console.log(result);
+```
+
+
+
+## 4. 寻找两个正序数组的中位数
+
+给定两个大小分别为 m 和 n 的正序（从小到大）数组 nums1 和 nums2。请你找出并返回这两个正序数组的 中位数 。
+
+算法的时间复杂度应该为 O(log (m+n)) 。
+
+示例 1：
+
+输入：nums1 = [1,3], nums2 = [2]
+输出：2.00000
+解释：合并数组 = [1,2,3] ，中位数 2
+
+```js
+/**
+ * @param {number[]} nums1
+ * @param {number[]} nums2
+ * @return {number}
+ */
+var findMedianSortedArrays = function(nums1, nums2) {
+    let newArr=new Array();
+    //双指针
+    let i=0;
+    let j=0;
+    while(i<nums1.length && j<nums2.length){
+        if (nums1[i]<=nums2[j]) {
+            newArr.push(nums1[i]);
+            i++;
+        }
+        if (nums2[j]<=nums1[i]) {
+            console.log(nums2[j]);
+            newArr.push(nums2[j]);
+            j++;
+        }
+    }
+
+    while (i<nums1.length){
+        newArr.push(nums1[i]);
+        i++;
+    }
+    while(j<nums2.length){
+        newArr.push(nums2[j]);
+        j++;
+    }
+    //return newArr;
+    let n=nums1.length+nums2.length;
+    if (n%2===0) {
+        return parseFloat((newArr[n/2]+newArr[n/2-1])/2);
+    }else{
+        return parseFloat(newArr[Math.floor(n/2)]);
+    }
+    console.log(newArr);
+};
+
+
+let str1 = [1,2];
+let str2=[3,4];
+let result=findMedianSortedArrays(str1,str2);
+console.log(result);
+```
+
+## 5. 最长回文子串
+
+给你一个字符串 s，找到 s 中最长的回文子串。
+
+```
+输入：s = "babad"
+输出："bab"
+解释："aba" 同样是符合题意的答案。
+```
+
+```
+
+```
+
+
+
+## 686. 重复叠加字符串匹配
+
+给定两个字符串 a 和 b，寻找重复叠加字符串 a 的最小次数，使得字符串 b 成为叠加后的字符串 a 的子串，如果不存在则返回 -1。
+
+注意：字符串 "abc" 重复叠加 0 次是 ""，重复叠加 1 次是 "abc"，重复叠加 2 次是 "abcabc"。
+
+**提示：**
+
+- `1 <= a.length <= 104`
+- `1 <= b.length <= 104`
+- `a` 和 `b` 由小写英文字母组成
+
+示例 1：
+
+输入：a = "abcd", b = "cdabcdab"
+输出：3
+解释：a 重复叠加三遍后为 "abcdabcdabcd", 此时 b 是其子串。
+
+```js
+/**
+ * @param {string} a
+ * @param {string} b
+ * @return {number}
+ */
+var repeatedStringMatch = function(a, b) {
+    //首先只要b中有字母不在a中,则不可能b为a的子串
+    let len_a=a.length;
+    let len_b=b.length;
+
+    let set=new Set();
+    for (let i=0;i<len_a;i++){
+        set.add(a[i]);
+    }
+    for (let i=0;i<len_b;i++){
+        if (!set.has(b[i])) {
+            return -1;
+        }
+    }
+    let newStr=a;
+    //判断b与a的长度，a当重复后长度最多超过b长度的2倍，如果2倍长度没有找到则返回-1
+    let n=len_b%len_a===0 ? len_b/len_a : Math.floor(len_b/len_a)+1;
+    if (len_a>=len_b) {
+        //当a长时，返回值最多为2
+        if (newStr.indexOf(b)!==-1) {
+            return 1;
+        }else{
+            newStr+=a;
+            if (newStr.indexOf(b)!==-1) {
+                return 2;
+            }else{
+                return -1;
+            }
+        }
+    }else{
+        //当b长时，a长度最多增加到b的2倍
+        for (let i=0;i<n-1;i++){
+            newStr+=a;
+        }
+        while (newStr.length<2*len_b){
+            if (newStr.indexOf(b)!==-1) {
+                return n;
+            }else{
+                newStr+=a;
+                n++;
+            }
+        }
+        if (newStr.indexOf(b)!==-1) {
+            return n;
+        }else{
+            return -1;
+        }
+        
+    }
+    return 0;
+};
+
+
+let str1 = "abc";
+let str2="cabcabca";
+
+let result=repeatedStringMatch(str1,str2);
 console.log(result);
 ```
 
