--- a/算法/力扣算法.md
+++ b/算法/力扣算法.md
@@ -238,6 +238,9 @@ console.log(result);
 
 给你一个字符串 s，找到 s 中最长的回文子串。
 
+- `1 <= s.length <= 1000`
+- `s` 仅由数字和英文字母（大写和/或小写）组成
+
 ```
 输入：s = "babad"
 输出："bab"
