--- a/算法/力扣算法.md
+++ b/算法/力扣算法.md
@@ -247,6 +247,64 @@ console.log(result);
 解释："aba" 同样是符合题意的答案。
 ```
 
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+    if (s.length===1) {return 1;}
+    let maxLen=s.length;
+    let flag1=false;
+    let flag2=false;
+    let newArr=[];  //
+    //从最长到最短判断
+    for (let i=0;i<s.length;i++){
+        for (let j=i;j<s.length;i++){
+            if (s[j]!===s[s.length-1-j]) {
+
+                flag1=true;
+                break;
+            }
+        }
+        for (let j=i;j<s.length;i++){
+            if (s[i]!===s[s.length-1-i]) {
+                flag1=true;
+                break;
+            }
+        }
+    }
+    return maxLen;
+};
+
+
+let str1 = "babad";
+let str2=[3,4];
+let result=longestPalindrome(str1);
+console.log(result);
+```
+
+## 6.Z 字形变换
+
+将一个给定字符串 s 根据给定的行数 numRows ，以从上往下、从左到右进行 Z 字形排列。
+
+比如输入字符串为 "PAYPALISHIRING" 行数为 3 时，排列如下：
+
+P    A    H   N
+A P L S I  I G
+Y    I     R
+之后，你的输出需要从左往右逐行读取，产生出一个新的字符串，比如："PAHNAPLSIIGYIR"。
+
+请你实现这个将字符串进行指定行数变换的函数：
+
+string convert(string s, int numRows);
+
+**提示：**
+
+- `1 <= s.length <= 1000`
+- `s` 由英文字母（小写和大写）、`','` 和 `'.'` 组成
+- `1 <= numRows <= 1000`
+
 ```
 
 ```
@@ -338,6 +396,43 @@ console.log(result);
 ```
 
 
+
+## 1044.最长重复子串
+
+给你一个字符串 s ，考虑其所有 重复子串 ：即，s 的连续子串，在 s 中出现 2 次或更多次。这些出现之间可能存在重叠。
+
+返回 任意一个 可能具有最长长度的重复子串。如果 s 不含重复子串，那么答案为 "" 。
+
+提示：
+
+2 <= s.length <= 3 * 104
+s 由小写英文字母组成
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestDupSubstring = function(s) {
+    let strA;
+    for (let k=s.length-1;k>0;k--){
+        for (let i=0;i+k<s.length;i++){
+            strA=s.slice(i,i+k);
+            if (i!==s.lastIndexOf(strA)){
+                return strA;
+            }
+        }
+        
+    }
+    return "";
+};
+
+let str1 = "basanaadsfenafdrrgeana";
+let result=longestDupSubstring(str1);
+console.log(result);
+```
+
+超时
 
 ## 1154.  一年中的第几天
 
