--- a/算法/力扣算法.md
+++ b/算法/力扣算法.md
@@ -306,7 +306,20 @@ string convert(string s, int numRows);
 - `1 <= numRows <= 1000`
 
 ```
+/**
+ * @param {string} s
+ * @param {number} numRows
+ * @return {string}
+ */
+var convert = function(s, numRows) {
+    if (numRows===1) {return s;}
+    
+    return newStr;
+};
 
+let str1 = "basanaadsfenafdrrgeana";
+let result=convert(str1);
+console.log(result);
 ```
 
 
@@ -486,3 +499,55 @@ console.log(result);
 
 **普通闰年:公历年份是4的倍数的，一般是闰年。（如2004年就是闰年）；
 世纪闰年:公历年份是整百数的，必须是400的倍数才是闰年（如1900年不是世纪闰年，2000年是世纪闰年）；**
+
+## 1705. 吃苹果的最大数目
+
+有一棵特殊的苹果树，一连 n 天，每天都可以长出若干个苹果。在第 i 天，树上会长出 apples[i] 个苹果，这些苹果将会在 days[i] 天后（也就是说，第 i + days[i] 天时）腐烂，变得无法食用。也可能有那么几天，树上不会长出新的苹果，此时用 apples[i] == 0 且 days[i] == 0 表示。
+
+你打算每天 最多 吃一个苹果来保证营养均衡。注意，你可以在这 n 天之后继续吃苹果。
+
+给你两个长度为 n 的整数数组 days 和 apples ，返回你可以吃掉的苹果的最大数目。
+
+提示：
+
+apples.length == n
+days.length == n
+1 <= n <= 2 * 104
+0 <= apples[i], days[i] <= 2 * 104
+只有在 apples[i] = 0 时，days[i] = 0 才成立
+
+核心思路就是每次都吃最快腐烂的苹果 按照苹果的腐烂时间给苹果排序 需要用到优先队列
+首先用实现一个优先队列的插入方法 核心思想二分法就可以
+然后将苹果按照过期时间排序 并记录苹果的数量
+苹果吃完了 就将队列第一项删除 或者腐烂了也需要删除
+直到所有的苹果都遍历完了并且优先队列也空了
+
+```
+/**
+ * @param {number[]} apples
+ * @param {number[]} days
+ * @return {number}
+ */
+var eatenApples = function(apples, days) {
+    let count=0;
+    let rest=0;
+    let temp=0;  //每天长出后有效个苹果
+    let max_day=0;
+
+    for (let i=0;i<apples.length;i++){
+        if (apples[i]>0) {
+            temp=apples[i]>days[i] ? days[i]+1 : apples[i];  //
+            apples[i]=temp;
+        }
+    }
+    return apples;
+    //return count;
+};
+
+let str1 = [1,2,3,5,2];
+let str2=[3,2,1,4,2];
+let result=eatenApples(str1,str2);
+console.log(result);
+
+```
+
