--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -408,6 +408,61 @@ let result=repeatedStringMatch(str1,str2);
 console.log(result);
 ```
 
+## 825. 适龄的朋友
+
+在社交媒体网站上有 n 个用户。给你一个整数数组 ages ，其中 ages[i] 是第 i 个用户的年龄。
+
+如果下述任意一个条件为真，那么用户 x 将不会向用户 y（x != y）发送好友请求：
+
+age[y] <= 0.5 * age[x] + 7
+age[y] > age[x]
+age[y] > 100 && age[x] < 100
+否则，x 将会向 y 发送一条好友请求。
+
+注意，如果 x 向 y 发送一条好友请求，y 不必也向 x 发送一条好友请求。另外，用户不会向自己发送好友请求。
+
+返回在该社交媒体网站上产生的好友请求总数。
+
+- `n == ages.length`
+- `1 <= n <= 2 * 104`
+- `1 <= ages[i] <= 120`
+
+```js
+/**
+ * @param {number[]} ages
+ * @return {number}
+ */
+var numFriendRequests = function(ages) {
+    if (ages.length===1) {return 0;}
+    let count=0;
+    ages.sort((a,b)=>b-a);  //从大到小排序
+    let flag=0;  //移动指针
+    for (let i=0;i<ages.length;i++){
+        for (let j=flag;j<ages.length;j++){
+            if (i!==j) {
+                if (ages[j]>ages[i]*0.5+7) {
+                    count++;
+                    //console.log(ages[i]+"->"+ages[j]);
+                }else{
+                    break;
+                }
+            }
+        }
+        //age变化则移动指针
+        if (ages[i]>ages[i+1]) {
+            //console.log(ages[flag]);
+            flag=i+1;
+        }
+    }
+    return count;
+};
+
+let str1 = [30,100,110,120,20];
+let result=numFriendRequests(str1);
+console.log(result);
+
+```
+
 
 
 ## 1044.最长重复子串
