--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -324,6 +324,244 @@ console.log(result);
 
 
 
+## 208. 实现 Trie (前缀树)
+
+Trie（发音类似 "try"）或者说 前缀树 是一种树形数据结构，用于高效地存储和检索字符串数据集中的键。这一数据结构有相当多的应用情景，例如自动补完和拼写检查。
+
+请你实现 Trie 类：
+
+Trie() 初始化前缀树对象。
+void insert(String word) 向前缀树中插入字符串 word 。
+boolean search(String word) 如果字符串 word 在前缀树中，返回 true（即，在检索之前已经插入）；否则，返回 false 。
+boolean startsWith(String prefix) 如果之前已经插入的字符串 word 的前缀之一为 prefix ，返回 true ；否则，返回 false 。
+
+提示：
+
+1 <= word.length, prefix.length <= 2000
+word 和 prefix 仅由小写英文字母组成
+insert、search 和 startsWith 调用次数 总计 不超过 3 * 104 次
+
+```js
+var Trie = function() {
+    this.children={};  //
+};
+
+/** 
+ * @param {string} word
+ * @return {void}
+ */
+//插入字符串
+Trie.prototype.insert = function(word) {
+    let node=this.children;
+    for (let ch of word){
+        //对于当前字符对应的子节点
+        if (!node[ch]) {
+            /*子节点不存在。创建一个新的子节点，记录在 children 数组的对应位置上，
+            然后沿着指针移动到子节点，继续搜索下一个字符。*/
+            node[ch]={};
+        }
+        //子节点存在。沿着指针移动到子节点，继续处理下一个字符。
+        node=node[ch];
+    }
+    node.isEnd=true;
+};
+
+/** 
+ * @param {string} word
+ * @return {boolean}
+ */
+ //搜索
+Trie.prototype.search = function(word) {
+    let node=this.startsWith(word);
+    //若搜索到了前缀的末尾，就说明字典树中存在该前缀。
+    //此外，若前缀末尾对应节点的 isEnd 为真，则说明字典树中存在该字符串。
+    return node!==undefined && node.isEnd!==undefined;
+};
+
+/** 
+ * @param {string} prefix
+ * @return {boolean}
+ */
+//查找前缀
+Trie.prototype.startsWith = function(prefix) {
+    let node=this.children;
+    for (let ch of prefix){
+        //子节点不存在。说明字典树中不包含该前缀，返回空指针
+        if (!node[ch]) {
+            return false;
+        }
+        //子节点存在。沿着指针移动到子节点，继续搜索下一个字符。
+        node=node[ch];
+    }
+    return node;
+};
+
+/**
+ * Your Trie object will be instantiated and called as such:
+ * var obj = new Trie()
+ * obj.insert(word)
+ * var param_2 = obj.search(word)
+ * var param_3 = obj.startsWith(prefix)
+ */
+
+let test=new Trie();
+
+test.insert("apple");
+result=test.search("apple");
+console.log(result);  //true
+
+result=test.search("app");
+console.log(result);  //false
+
+result=test.startsWith("app");
+console.log(result);  //
+
+test.insert("app");
+result=test.search("app");
+console.log(result);  //
+```
+
+
+
+## 472. 连接词
+
+给你一个 不含重复 单词的字符串数组 words ，请你找出并返回 words 中的所有 连接词 。
+
+连接词 定义为：一个完全由给定数组中的至少两个较短单词组成的字符串。
+
+提示：
+
+1 <= words.length <= 104
+0 <= words[i].length <= 1000
+words[i] 仅由小写字母组成
+0 <= sum(words[i].length) <= 105
+
+方法一：字典树 + 深度优先搜索
+判断一个单词是不是连接词，需要判断这个单词是否完全由至少两个给定数组中的更短的非空单词（可以重复）组成。判断更短的单词是否在给定数组中，可以使用字典树实现。
+
+1. 为了方便处理，首先将数组 words 按照字符串的长度递增的顺序排序，排序后可以确保当遍历到任意单词时，比该单词短的单词一定都已经遍历过，因此可以根据已经遍历过的全部单词判断当前单词是不是连接词。
+2. 在将数组 words 排序之后，遍历数组，跳过空字符串，对于每个非空单词，判断该单词是不是连接词，如果是连接词则将该单词加入结果数组，如果不是连接词则将该单词加入字典树。
+3. 判断一个单词是不是连接词的做法是在字典树中深度优先搜索。从该单词的第一个字符（即下标 00处的字符）开始，在字典树中依次搜索每个字符对应的结点，可能有以下几种情况：
+
+- 如果一个字符对应的结点是单词的结尾，则找到了一个更短的单词，从该字符的后一个字符开始搜索下一个更短的单词；
+- 如果一个字符对应的结点在字典树中不存在，则当前的搜索结果失败，回到上一个单词的结尾继续搜索。
+
+如果找到一个更短的单词且这个更短的单词的最后一个字符是当前单词的最后一个字符，则当前单词是连接词。由于数组 words 中没有重复的单词，因此在判断一个单词是不是连接词时，该单词一定没有加入字典树，由此可以确保判断连接词的条件成立。
+
+由于一个连接词由多个更短的非空单词组成，如果存在一个较长的连接词的组成部分之一是一个较短的连接词，则一定可以将这个较短的连接词换成多个更短的非空单词，因此不需要将连接词加入字典树。
+
+```
+var Trie = function() {
+    this.children={};  //
+};
+
+/** 
+ * @param {string} word
+ * @return {void}
+ */
+//插入字符串
+Trie.prototype.insert = function(word) {
+    let node=this.children;
+    for (let ch of word){
+        //对于当前字符对应的子节点
+        if (!node[ch]) {
+            /*子节点不存在。创建一个新的子节点，记录在 children 数组的对应位置上，
+            然后沿着指针移动到子节点，继续搜索下一个字符。*/
+            node[ch]={};
+        }
+        //子节点存在。沿着指针移动到子节点，继续处理下一个字符。
+        node=node[ch];
+    }
+    node.isEnd=true;
+};
+
+/** 
+ * @param {string} word
+ * @param {start} int 单词开始索引位置
+ * @return {boolean}
+ */
+ //查找一个词从索引开始后的连续部分是否已存在
+Trie.prototype.dfs = function(word,start) {
+    let node=this.children;
+    for (let i=start;i<word.length;i++){
+        node=node[word[i]];
+        //深度优先遍历
+        if (node!==undefined) {
+            if (node.isEnd!==undefined) {
+                return i+1;
+            }else{
+                continue;
+            }
+        }
+        node=node[word[i]];
+        if (!node) {
+            //得考虑这个单词不行可能那个单词行,carbat比如cat与car
+            return false;
+        }
+        
+        if (node && i===word.length-1){
+            return i+1;
+        }
+    }
+};
+
+
+
+/**
+ * @param {string[]} words
+ * @return {string[]}
+ */
+var findAllConcatenatedWordsInADict = function(words) {
+    words.sort((a,b)=>a.length-b.length);  //按长度从小到大排序
+    words=words.filter(item=>item.length>0);
+
+    let result=[];  //结果数组
+    if (words.length<3) {
+        //不足三个词就不符合题意
+        return result;
+    }
+
+    const trie=new Trie();
+
+    trie.insert(words[0]);
+    trie.insert(words[1]);
+    //console.log(trie);
+   
+    for (let i=2;i<words.length;i++){
+        let word=words[i];
+        let start;
+        let count=0;
+        for(start=0;start<word.length;){
+            let index=trie.dfs(word,start);
+            if (index===false) {
+                trie.insert(word);
+                break;
+            }else{
+                if (index<word.length) {
+                    start=index;
+                    count++;
+                }else{
+                    if (count>1) {
+                        result.push(word);
+                    }
+                }
+            }
+        }
+
+    }
+    return result;
+};
+
+
+let str1= ["cat","cats","","catsdogcats","dog","dogcatsdog","hippopotamuses","rat","ratcatdogcat"];
+let result=findAllConcatenatedWordsInADict(str1);
+console.log(result);
+
+
+```
+
+
+
 ## 686. 重复叠加字符串匹配
 
 给定两个字符串 a 和 b，寻找重复叠加字符串 a 的最小次数，使得字符串 b 成为叠加后的字符串 a 的子串，如果不存在则返回 -1。
