--- a/数据结构与算法/数据结构.md
+++ b/数据结构与算法/数据结构.md
@@ -80,3 +80,106 @@ a = (char*)realloc(a, 10*sizeof(char));
 ## BF算法（串模式匹配算法）
 
 ## KMP算法（快速模式匹配算法）
+
+
+
+# 实现 Trie (前缀树)
+
+## 一、字典树的概念
+
+Trie树，又称字典树，单词查找树或者前缀树，是一种用于快速检索的多叉树结构，如英文字母的字典树是一个26叉树，数字的字典树是一个10叉树。
+与二叉查找树不同，Trie树的键不是直接保存在节点中，而是由节点在树中的位置决定。一个节点的所有子孙都有相同的前缀，也就是这个节点对应的字符串，而根节点对应空字符串。一般情况下，不是所有的节点都有对应的值，只有叶子节点和部分内部节点所对应的键才有相关的值。
+
+Trie树优点是最大限度地减少无谓的字符串比较，查询效率比较高。核心思想是空间换时间，利用字符串的公共前缀来降低查询时间的开销以达到提高效率的目的。
+
+（1） 插入、查找的时间复杂度均为O(N)，其中N为字符串长度。
+（2） 空间复杂度是26^n级别的，非常庞大（可采用双数组实现改善）。
+
+它有3个基本性质：
+
+根节点不包含字符，除根节点外每一个节点都只包含一个字符。
+从根节点到某一节点，路径上经过的字符连接起来，为该节点对应的字符串。
+每个节点的所有子节点包含的字符都不相同。
+
+## 二、Trie树和DFA，确定有限状态自动机
+
+trie树实际上是一个DFA，通常用转移矩阵表示。行表示状态，列表示输入字符，（行，列）位置表示转移状态。这种方式的查询效率很高，但由于稀疏的现象严重，空间利用效率很低。也可以采用压缩的存储方式即链表来表示状态转移，但由于要线性查询，会造成效率低下。
+
+ 
+
+## 三、Trie树的实现
+
+Trie树的创建要考虑的是父节点如何保存孩子节点，主要有链表和数组两种方式：
+
+（1）使用节点数组，因为是英文字符，可以用Node[26]来保存孩子节点(如果是数字我们可以用Node[10])，这种方式最快，但是并不是所有节点都会有很多孩子，所以这种方式浪费的空间太多
+（2）用一个链表根据需要动态添加节点。这样我们就可以省下不小的空间，但是缺点是搜索的时候需要遍历这个链表，增加了时间复杂度。
+
+（1）查询操作
+
+查询操作非常简单。比如要查找int，顺着路径i -> in -> int就找到了。
+
+（2）如何构建
+
+Trie树的构建也很简单，无非是逐一把每则单词的每个字母插入Trie。
+插入前先看前缀是否存在。如果存在，就共享，否则创建对应的节点和边。
+
+#### 字典树
+
+Trie，又称前缀树或字典树，是一棵有根树，其每个节点包含以下字段：
+
+指向子节点的指针数组 children。对于本题而言，数组长度为 26，即小写英文字母的数量。此时 children[0] 对应小写字母 a，children[1] 对应小写字母 b，…，children[25] 对应小写字母 z。
+布尔字段isEnd，表示该节点是否为字符串的结尾。
+
+#### 插入字符串
+
+我们从字典树的根开始，插入字符串。对于当前字符对应的子节点，有两种情况：
+
+- 子节点存在。沿着指针移动到子节点，继续处理下一个字符。
+- 子节点不存在。创建一个新的子节点，记录在children 数组的对应位置上，然后沿着指针移动到子节点，继续搜索下一个字符。
+- 重复以上步骤，直到处理字符串的最后一个字符，然后将当前节点标记为字符串的结尾。
+
+#### 查找前缀
+
+我们从字典树的根开始，查找前缀。对于当前字符对应的子节点，有两种情况：
+
+子节点存在。沿着指针移动到子节点，继续搜索下一个字符。
+子节点不存在。说明字典树中不包含该前缀，返回空指针。
+重复以上步骤，直到返回空指针或搜索完前缀的最后一个字符。
+
+若搜索到了前缀的末尾，就说明字典树中存在该前缀。此外，若前缀末尾对应节点的 isEnd 为真，则说明字典树中存在该字符串。
+
+
+
+## **四、字典树应用场景**
+
+**（1） 字符串检索**
+事先将已知的一些字符串（字典）的有关信息保存到trie树里，查找另外一些未知字符串是否出现过或者出现频率。
+举例：
+给出N 个单词组成的熟词表，以及一篇全用小写英文书写的文章，请你按最早出现的顺序写出所有不在熟词表中的生词。
+给出一个词典，其中的单词为不良单词。单词均为小写字母。再给出一段文本，文本的每一行也由小写字母构成。判断文本中是否含有任何不良单词。例如，若rob是不良单词，那么文本problem含有不良单词。
+
+**（2）字符串最长公共前缀**
+Trie树利用多个字符串的公共前缀来节省存储空间，反之，当我们把大量字符串存储到一棵trie树上时，我们可以快速得到某些字符串的公共前缀。
+举例：
+给出N 个小写英文字母串，以及Q 个询问，即询问某两个串的最长公共前缀的长度是多少？
+解决方案：首先对所有的串建立其对应的字母树。此时发现，对于两个串的最长公共前缀的长度即它们所在结点的公共祖先个数，于是，问题就转化为了离线（Offline）的最近公共祖先（Least Common Ancestor，简称LCA）问题。
+而最近公共祖先问题同样是一个经典问题，可以用下面几种方法：
+\1. 利用并查集（Disjoint Set），可以采用采用经典的Tarjan 算法；
+\2. 求出字母树的欧拉序列（Euler Sequence ）后，就可以转为经典的最小值查询（Range Minimum Query，简称RMQ）问题了；
+
+**（3）排序**
+
+Trie树是一棵多叉树，只要先序遍历整棵树，输出相应的字符串便是按字典序排序的结果。
+比如给你N 个互不相同的仅由一个单词构成的英文名，让你将它们按字典序从小到大排序输出。
+
+**（4） 作为其他数据结构和算法的辅助结构**
+如后缀树，AC自动机等
+
+**（5）词频统计**
+trie树在这里的应用类似哈夫曼树，
+比如词频统计使用哈希表或者堆都可以，但是如果内存有限，就可以用trie树来压缩空间，因为trie树的公共前缀都是用一个节点保存的。
+
+**（6）字符串搜索的前缀匹配**
+trie树常用于搜索提示。如当输入一个网址，可以自动搜索出可能的选择。当没有完全匹配的搜索结果，可以返回前缀最相似的可能。
+Trie树检索的时间复杂度可以做到n，n是要检索单词的长度，
+如果使用暴力检索，需要指数级O(N2)的时间复杂度。
