--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -444,7 +444,7 @@ words[i] 仅由小写字母组成
 3. 判断一个单词是不是连接词的做法是在字典树中深度优先搜索。从该单词的第一个字符（即下标 00处的字符）开始，在字典树中依次搜索每个字符对应的结点，可能有以下几种情况：
 
 - 如果一个字符对应的结点是单词的结尾，则找到了一个更短的单词，从该字符的后一个字符开始搜索下一个更短的单词；
-- 如果一个字符对应的结点在字典树中不存在，则当前的搜索结果失败，回到上一个单词的结尾继续搜索。
+- **如果一个字符对应的结点在字典树中不存在，则当前的搜索结果失败，回到上一个单词的结尾继续搜索。**
 
 如果找到一个更短的单词且这个更短的单词的最后一个字符是当前单词的最后一个字符，则当前单词是连接词。由于数组 words 中没有重复的单词，因此在判断一个单词是不是连接词时，该单词一定没有加入字典树，由此可以确保判断连接词的条件成立。
 
@@ -549,6 +549,117 @@ var findAllConcatenatedWordsInADict = function(words) {
         }
 
     }
+    return result;
+};
+
+
+let str1= ["cat","cats","","catsdogcats","dog","dogcatsdog","hippopotamuses","rat","ratcatdogcat"];
+let result=findAllConcatenatedWordsInADict(str1);
+console.log(result);
+
+
+```
+
+```
+
+//插入字符串
+function insertWord(dictTree,word) {
+    let node=dictTree;
+    for (let ch of word){
+        //对于当前字符对应的子节点
+        if (!node[ch]) {
+            /*子节点不存在。创建一个新的子节点，记录在 children 数组的对应位置上，
+            然后沿着指针移动到子节点，继续搜索下一个字符。*/
+            node[ch]={};
+        }
+        //子节点存在。沿着指针移动到子节点，继续处理下一个字符。
+        node=node[ch];
+    }
+    node.isEnd=true;
+};
+
+//检查单词是否是连接词
+function checkWord(dictTree,word,start){
+    
+    let node=dictTree;
+    let count=0;  //计数找到多少个更短的单词
+    let i; //i为要检查单词开始的索引
+    let tempNode=[];  //记录一个路径上是单词的尾结点
+    let tempIndex=[];  //记录一个路径上尾结点对应的索引
+    for(i=0;i<word.length;){
+        if (node[word[i]]===undefined && count<1) {
+            //如果一个短的单词都没有找到，则不是连接词
+            return false;
+        }
+        if (node[word[i]]===undefined){
+            //当已经找到一个更短的单词时，字母在该路径不存在
+            if (count>0) {
+                //当尾结点数大于终末尾结点数时,则可以退回到上一次尾结点
+                if (tempNode.length>count){
+                    
+                }
+            }
+        }else{
+            //当一个字母在该路径存在
+            node=node[word[i]];
+            if (node.isEnd!==undefined) {
+                //node是一个单词的尾结点
+                tempNode.push(node);  //记录索引和结点指针
+                tempIndex.push(i);
+                //如果路径上还有结点,继续深度搜索
+                if (node[word[i+1]]===undefined) {
+                    //当是尾结点且后面不匹配
+                    count+=1;
+                    //从当前位置开始匹配下一份更短单词
+                    node=dictTree;
+                }
+            }
+            i++;
+        }
+
+    }
+    return true;
+}
+
+/**
+ * @param {string[]} words
+ * @return {string[]}
+ */
+var findAllConcatenatedWordsInADict = function(words) {
+    words.sort((a,b)=>a.length-b.length);  //按长度从小到大排序
+    words=words.filter(item=>item.length>0);
+
+    let result=[];  //结果数组
+    if (words.length<3) {
+        //不足三个词就不符合题意
+        return result;
+    }
+
+    const dictTree={};
+
+    insertWord(dictTree,words[0]);
+    insertWord(dictTree,words[1]);
+    //console.log(dictTree);
+   
+   for (let i=2;i<words.length;i++){
+        let word=words[i];
+        if (dictTree[word[0]]===undefined) {
+            //因为单词是从短到长排序的
+            //如果单词的第一个字母不在字典树的开始，则一定不是连接词，插入
+            insertWord(dictTree,word);
+            continue;  //跳过余下检查
+        }
+
+        let isConcatWord=checkWord(dictTree,word)
+        if (isConcatWord) {
+            //如果是连接词
+            result.push(word);
+        }else{
+            //不是则插入
+            insertWord(dictTree,word)
+        }
+    }
+
     return result;
 };
 
@@ -841,6 +952,62 @@ let str1 = [1,2,3,5,2];
 let str2=[3,2,1,4,2];
 let result=eatenApples(str1,str2);
 console.log(result);
+
+```
+
+## 1995. 统计特殊四元组
+
+给你一个 下标从 0 开始 的整数数组 nums ，返回满足下述条件的 不同 四元组 (a, b, c, d) 的 数目 ：
+
+nums[a] + nums[b] + nums[c] == nums[d] ，且
+a < b < c < d
+
+提示：
+4 <= nums.length <= 50
+1 <= nums[i] <= 100
+
+直接枚举
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var countQuadruplets = function(nums) {
+    let count=0;
+    if (nums[0]+nums[1]+nums[2]===nums[3]) {count+=1;}
+    for(let d=4;d<nums.length;d++){
+        //1 <= nums[i] <= 100
+        for(let a=0;a<=d-3;a++){
+            if (nums[a]>=nums[d]) {
+                continue
+            }
+            for(let b=a+1;b<=d-2;b++){
+                if (nums[a]+nums[b]>=nums[d]) {
+                    continue
+                }
+                for(let c=b+1;c<=d-1;c++){
+                    if (nums[a]+nums[b]+nums[c]===nums[d]) {
+                        console.log(a,b,c,d);
+                        count+=1;
+                    }
+                }
+            }
+        }
+    }
+    return count;
+};
+
+
+let str1= [56,50,33,1,86,80,85,42,90];
+let result=countQuadruplets(str1);
+console.log(result);
+
+```
+
+使用哈希表存储 nums[d]
+
+```
 
 ```
 
