--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -322,6 +322,133 @@ let result=convert(str1);
 console.log(result);
 ```
 
+## 9.回文数
+
+给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。
+
+回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。例如，121 是回文，而 123 不是。
+
+提示：
+-231 <= x <= 231 - 1
+
+```js
+/**
+ * @param {number} x
+ * @return {boolean}
+ */
+var isPalindrome = function(x) {
+    if (x<0) {
+        return false;
+    }
+    x=x.toString();
+
+    for (let i=0;i<x.length/2;i++){
+        if (x[i]!==x[x.length-1-i]) {
+            return false;
+        }
+    }
+    return true;
+};
+
+let str1 = -121;
+let result=isPalindrome(str1);
+console.log(result);
+
+```
+
+## 10. 正则表达式匹配
+
+给你一个字符串 s 和一个字符规律 p，请你来实现一个支持 '.' 和 '*' 的正则表达式匹配。
+
+'.' 匹配任意单个字符
+'*' 匹配零个或多个前面的那一个元素
+所谓匹配，是要涵盖 整个 字符串 s的，而不是部分字符串。
+
+提示：
+
+1 <= s.length <= 20
+1 <= p.length <= 30
+s 可能为空，且只包含从 a-z 的小写字母。
+p 可能为空，且只包含从 a-z 的小写字母，以及字符 . 和 *。
+保证每次出现字符 * 时，前面都匹配到有效的字符
+
+直接调用正则方法
+
+```js
+/**
+ * @param {string} s
+ * @param {string} p
+ * @return {boolean}
+ */
+var isMatch = function(s, p) {
+    return new RegExp("^"+p+"$").test(s);
+};
+```
+
+动态规划
+
+```
+/**
+ * @param {string} s
+ * @param {string} p
+ * @return {boolean}
+ */
+var isMatch = function(s, p) {
+    //动态规划 dp[i][j]:表示s的前i个字符，p的前j个字符是否能够匹配
+    let lenS=s.length;
+    let lenP=p.length;
+
+    let dp=new Array(lenS+1);
+
+    for (let i=0;i<dp.length;i++){
+        //先构造dp[][]数组，将其每一项初始化为false
+        dp[i]=new Array(lenP+1).fill(false);
+
+    }
+    //base case
+    dp[0][0] = true; // s为空、p为空 两者都是空串的时候 可匹配
+
+    //s不为空 p为空，必为false(dp数组默认值为false，无需处理)
+
+    /*//s为空，p不为空(dp[0][]) 由于*可以匹配0个字符，所以有可能为true 
+    要进行处理（看看有无*来挽救） 注意 dp[0][j] 当j=1时，表示p的前1个字符
+    自然是p[j-1]呢，p的下标是从0开始*/
+    for (let j=1;j<lenP;j++){
+        if (p[j-1]==="*") {
+            dp[0][j]=dp[0][j-2];
+        }
+    }
+
+    // 迭代 状态转移
+    for (let i=1;i<=lenS;i++){
+        for (let j=1;j<lenP;j++){
+            if (s[i-1]===p[j-1] || p[j-1]===".") {
+                //最好简单情况 到这里 s、p 可以直接匹配
+                dp[i][j]=dp[i-1][j-1];
+            }else if(p[j-1]==="*"){
+                //不满足直接对应相等，但 p这个字符是 ‘*’ 的话 仔细考虑
+                if (s[i-1]===p[j-2] || p[j-2]===".") {
+                    //s当前字符 可匹配上 p前一个字符
+                    ////*匹配0次的情况 ｜｜ *匹配1次或多次的情况 
+                    dp[i][j]=dp[i][j-2]  || dp[i-1][j];
+                }else if(s[i-1]!==p[j-2]){
+                    //s当前字符 无法匹配上 p前一个字符，只能是 *匹配0次的情况
+                    dp[i][j]=dp[i][j-2];
+                }
+            }
+        }
+    }
+
+    return dp[lenS][lenP];
+};
+
+let str1 = "mississippi";
+let str2="mis*is*p*.";
+let result=isMatch(str1,str2);
+console.log(result);
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
@@ -814,6 +941,81 @@ console.log(result);
 
 
 
+## 846. 一手顺子
+
+Alice 手中有一把牌，她想要重新排列这些牌，分成若干组，使每一组的牌数都是 groupSize ，并且由 groupSize 张连续的牌组成。
+
+给你一个整数数组 hand 其中 hand[i] 是写在第 i 张牌，和一个整数 groupSize 。如果她可能重新排列这些牌，返回 true ；否则，返回 false 。
+
+提示：
+
+1 <= hand.length <= 104
+0 <= hand[i] <= 109
+1 <= groupSize <= hand.length
+
+示例 1：
+
+输入：hand = [1,2,3,6,2,3,4,7,8], groupSize = 3
+输出：true
+解释：Alice 手中的牌可以被重新排列为 [1,2,3]，[2,3,4]，[6,7,8]。
+示例 2：
+
+输入：hand = [1,2,3,4,5], groupSize = 4
+输出：false
+解释：Alice 手中的牌无法被重新排列成几个大小为 4 的组。
+
+```js
+/**
+ * @param {number[]} hand
+ * @param {number} groupSize
+ * @return {boolean}
+ */
+var isNStraightHand = function(hand, groupSize) {
+    if (hand.length%groupSize!==0) {
+        //当不能整除则不能排列为相同size的
+        return false;
+    }
+    if (groupSize===1) {
+        //当size为1则可以
+        return true;
+    }
+    //从小到大排序
+    hand.sort((a,b)=>a-b);
+    //console.log(hand.length/groupSize);
+    //console.log(hand);
+    let len=hand.length;  //记录初始长度
+
+    for (let i=0;i<len/groupSize;i++){
+        let temp=hand[0];  //每一次排列一定是从最小的开始
+        //console.log(temp);
+        hand.shift();  //删除第一张牌
+
+        for (let j=1;j<groupSize;j++){
+            //从第二张开始找就行
+            let index=hand.indexOf(temp+j);
+            if (index===-1) {
+                //如果不存在比上一张大1的牌
+                return false;
+            }
+            //存在则删除
+            //console.log(hand[index]);
+            hand.splice(index,1);
+
+        }
+        //console.log("---")
+    }
+
+    return true;
+};
+
+let hand = [9,13,15,23,22,25,16,21,18,21,24,23,10,21,16,18,16,18,5,20,19,20,10,14,26,2,9,19,12,28,17,5,7,25,22,16,17,21,11];
+let groupSize = 10;
+
+console.log(isNStraightHand(hand,groupSize));
+```
+
+
+
 ## 1044.最长重复子串
 
 给你一个字符串 s ，考虑其所有 重复子串 ：即，s 的连续子串，在 s 中出现 2 次或更多次。这些出现之间可能存在重叠。
@@ -1010,4 +1212,6 @@ console.log(result);
 ```
 
 ```
+
+
 
