--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -322,6 +322,132 @@ let result=convert(str1);
 console.log(result);
 ```
 
+## 7. 整数反转
+
+给你一个 32 位的有符号整数 x ，返回将 x 中的数字部分反转后的结果。
+
+如果反转后整数超过 32 位的有符号整数的范围 [−231,  231 − 1] ，就返回 0。
+
+假设环境不允许存储 64 位整数（有符号或无符号）。
+
+```java
+import java.util.*;
+
+class Solution {
+	public int reverse(int x) {
+		if (x>-10 && x<10) return x;
+		long result=0;
+		while(x!=0){
+			result=result*10+x%10;
+			x=x/10;
+		}
+		//检测是否溢出，溢出则返回0
+		return (int) result==result ? (int) result :0;
+	}
+}
+
+
+public class TestOperateString{
+	public static void main(String[] args) {
+
+		//int[] testnums={1,2,3,4,5,6,7,8,9,10};
+		//char[] testStr={'h','e','l','l','o','b'};
+
+		int n=-136469;
+
+		Solution mysolution=new Solution();
+		//mysolution.reverseString(testStr);
+		int result=mysolution.reverse(n);
+		System.out.println(result);
+		//System.out.println(Arrays.toString(testStr));
+	}
+}
+```
+
+注意检查是否溢出
+
+## 8. 字符串转换整数 (atoi)
+
+请你来实现一个 myAtoi(string s) 函数，使其能将字符串转换成一个 32 位有符号整数（类似 C/C++ 中的 atoi 函数）。
+
+函数 myAtoi(string s) 的算法如下：
+
+读入字符串并丢弃无用的前导空格
+检查下一个字符（假设还未到字符末尾）为正还是负号，读取该字符（如果有）。 确定最终结果是负数还是正数。 如果两者都不存在，则假定结果为正。
+读入下一个字符，直到到达下一个非数字字符或到达输入的结尾。字符串的其余部分将被忽略。
+将前面步骤读入的这些数字转换为整数（即，"123" -> 123， "0032" -> 32）。如果没有读入数字，则整数为 0 。必要时更改符号（从步骤 2 开始）。
+如果整数数超过 32 位有符号整数范围 [−231,  231 − 1] ，需要截断这个整数，使其保持在这个范围内。具体来说，小于 −231 的整数应该被固定为 −231 ，大于 231 − 1 的整数应该被固定为 231 − 1 。
+返回整数作为最终结果。
+注意：
+
+本题中的空白字符只包括空格字符 ' ' 。
+除前导空格或数字后的其余字符串外，请勿忽略 任何其他字符。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var myAtoi = function(s) {
+    s=s.trim();
+    let patt=/[^0-9+-]/
+    if (patt.test(s[0])) {
+        return 0;
+    }
+    let nums=new Array();
+    nums.push(s[0]);
+    for (let i=1;i<s.length;i++){
+        if (/\D/.test(s[i])) {
+            //查找到非数字停止
+            break;
+        }else{
+            nums.push(s[i]);
+        }
+    }
+
+    let num=nums.join("");
+    if (num==="+" || num==="-") {return 0;}
+    num=parseInt(num);
+    const START=-Math.pow(2,31);
+    const END=Math.pow(2,31)-1;
+
+    if (num<START) {return START;}
+    if (num>END) {return END;}
+    return num;
+};
+
+
+let str1 = "+-12";
+let result=myAtoi(str1);
+console.log(result);
+
+```
+
+直接调用内置函数
+
+```js
+var myAtoi = function(s) {
+    s=s.trim();
+    let num=parseInt(s);
+    if (isNaN(num)) {
+        return 0;
+    }
+    const START=-Math.pow(2,31);
+    const END=Math.pow(2,31)-1;
+
+    if (num<START) {return START;}
+    if (num>END) {return END;}
+    return num;
+};
+
+
+let str1 = "words and 987";
+let result=myAtoi(str1);
+console.log(result);
+```
+
+### 
+
 ## 9.回文数
 
 给你一个整数 x ，如果 x 是一个回文整数，返回 true ；否则，返回 false 。
@@ -446,6 +572,348 @@ let str1 = "mississippi";
 let str2="mis*is*p*.";
 let result=isMatch(str1,str2);
 console.log(result);
+
+```
+
+## 13. 罗马数字转整数
+
+罗马数字包含以下七种字符: I， V， X， L，C，D 和 M。
+
+字符          数值
+I             1
+V             5
+X             10
+L             50
+C             100
+D             500
+M             1000
+例如， 罗马数字 2 写做 II ，即为两个并列的 1 。12 写做 XII ，即为 X + II 。 27 写做  XXVII, 即为 XX + V + II 。
+
+通常情况下，罗马数字中小的数字在大的数字的右边。但也存在特例，例如 4 不写做 IIII，而是 IV。数字 1 在数字 5 的左边，所表示的数等于大数 5 减小数 1 得到的数值 4 。同样地，数字 9 表示为 IX。这个特殊的规则只适用于以下六种情况：
+
+I 可以放在 V (5) 和 X (10) 的左边，来表示 IV (4) 和 IX  (9)。
+X 可以放在 L (50) 和 C (100) 的左边，来表示 XL 40 和 XC90。 
+C 可以放在 D (500) 和 M (1000) 的左边，来表示 CD 400 和 CM 900。
+给定一个罗马数字，将其转换成整数。
+
+提示：
+
+1 <= s.length <= 15
+s 仅含字符 ('I', 'V', 'X', 'L', 'C', 'D', 'M')
+题目数据保证 s 是一个有效的罗马数字，且表示整数在范围 [1, 3999] 内
+题目所给测试用例皆符合罗马数字书写规则，不会出现跨位等情况。
+IL 和 IM 这样的例子并不符合题目要求，49 应该写作 XLIX，999 应该写作 CMXCIX 。
+关于罗马数字的详尽书写规则，可以参考 罗马数字 - Mathematics 。
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var romanToInt = function(s) {
+
+	let romanObj={I:1,V:5,X:10,L:50,C:100,D:500,M:1000};
+	let sum=0;
+
+	let i=0;
+	while(s.length>0){
+		if (s.length===1) {
+			sum+=romanObj[s[0]];
+			break;
+		}
+		if (s[0]=="I") {
+			if (s[1]==="V") {
+				sum+=4;
+				s=s.slice(2);
+				continue;
+			}
+			if (s[1]==="X") {
+				sum+=9;
+				s=s.slice(2);
+				continue;
+			}
+			sum+=1;
+			s=s.slice(1);
+			continue;
+		}else if(s[0]=="X") {
+			if (s[1]==="L") {
+				sum+=40;
+				s=s.slice(2);
+				continue;
+			}
+			if (s[1]==="C") {
+				sum+=90;
+				s=s.slice(2);
+				continue;
+			}
+			sum+=10;
+			s=s.slice(1);
+			continue;
+		}else if(s[0]=="C") {
+			if (s[1]==="D") {
+				sum+=400;
+				s=s.slice(2);
+				continue;
+			}
+			if (s[1]==="M") {
+				sum+=900;
+				s=s.slice(2);
+				continue;
+			}
+			sum+=100;
+			s=s.slice(1);
+			continue;
+		}
+		sum+=romanObj[s[0]];
+		s=s.slice(1);
+	}
+	return sum;
+};
+
+let str1="MCMXCIV";
+let result=romanToInt(str1);
+console.log(result);
+```
+
+## 14. 最长公共前缀
+
+编写一个函数来查找字符串数组中的最长公共前缀。
+
+如果不存在公共前缀，返回空字符串 `""`。
+
+```js
+/**
+ * @param {string[]} strs
+ * @return {string}
+ */
+var longestCommonPrefix = function(strs) {
+    if (strs.length===1) {return strs[0];}
+    let minLen=strs[0].length;
+    for (let i=0;i<strs.length;i++){
+        if (strs[i].length===0) {
+            return "";
+        }
+        if (strs[i].length<minLen) {
+            minLen=strs[i].length;
+        }
+    }
+    let alphas=new Array("");
+    for (let i=0;i<minLen;i++){
+        for (let j=1;j<strs.length;j++){
+            if (strs[j][i]!=strs[0][i]) {
+                return alphas.join("");
+            }
+        }
+        alphas.push(strs[0][i]);
+    }
+    return alphas.join("");
+};
+
+
+let str1 = ["flower","flow","flight"];
+let result=longestCommonPrefix(str1);
+//console.log(typeof result);
+console.log(result);
+
+```
+
+利用数组的 Reduce 方法实现的最简洁代码
+
+取第一个字符串为公共前缀
+逐个对比，返回两两元素的公共前缀
+将 2 中的公共前缀和下一个元素对比，得到新的公共前缀
+
+## 15. 三数之和
+
+给你一个包含 n 个整数的数组 nums，判断 nums 中是否存在三个元素 a，b，c ，使得 a + b + c = 0 ？请你找出所有和为 0 且不重复的三元组。
+
+注意：答案中不可以包含重复的三元组。
+提示：
+
+0 <= nums.length <= 3000
+-105 <= nums[i] <= 105
+
+繁琐的思路，需要简化代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number[][]}
+ */
+var threeSum = function(nums) {
+	if (nums.length<3) {
+		return [];
+	}
+
+	if (nums.length===3) {
+		if (nums[0]+nums[1]+nums[2]===0) {
+			return [[...nums]];
+		}else{
+			return[]
+		}
+	}
+
+	let newArr=[];
+
+	const positiveInterger=[];
+	const negativeInterger=[];
+	const zeros=[];
+
+	nums.sort((a,b)=>a-b);
+	let count=0;
+	let temp=nums[0];
+	//非零相同值最多需要留两个就可
+	for (let i=0;i<nums.length;i++){
+		//这里可用indexOf与lastIndexOf处理
+		if (nums[i]!==temp) {
+			temp=nums[i];
+			count=1;
+			if (nums[i]<0) {
+				negativeInterger.push(nums[i]);
+			}else if(nums[i]>0){
+				positiveInterger.push(nums[i]);
+			}else{
+				zeros.push(0);
+			}
+		}else{
+			if (nums[i]!==0) {
+				if (count<2) {
+					count+=1
+					if (nums[i]<0) {
+						negativeInterger.push(nums[i]);
+					}else{
+						positiveInterger.push(nums[i]);
+					}
+				}
+			}else{
+				zeros.push(0);
+			}
+		}
+	}
+	if (zeros.length!==0) {
+		//有0时把0作为负数处理
+		negativeInterger.push(0);
+		//正数则为
+		//positiveInterger.unshift(0);
+	}
+	if (zeros.length>2) {
+		newArr.push([0,0,0]);
+	}
+
+	//console.log(positiveInterger);
+	//console.log(negativeInterger);
+
+	//需要匹配最大正数索引边界，动态变化
+	let maxPositiveIndex=positiveInterger.length-1;
+	//最大负数和
+	let maxSum1;
+	for (let i=0;i<negativeInterger.length-1;i++){
+		//两负一正时
+		if (maxPositiveIndex===-1) {
+			//当正整数遍历完时，退出
+			break;
+		}
+		if (i>0) {
+			if (negativeInterger[i]===negativeInterger[i-1]) {
+				continue;
+			}
+		}
+		maxSum1=-(negativeInterger[i]+negativeInterger[i+1]);
+		if (positiveInterger[maxPositiveIndex]>maxSum1) {
+			maxPositiveIndex--;
+		}
+		for (let j=i+1;j<negativeInterger.length;j++){
+			//计算两个负数和后取绝对值
+			if (maxPositiveIndex===-1) {
+				//当正整数遍历完时，退出
+				break;
+			}
+			if (negativeInterger[j]===negativeInterger[j+1]) {
+				continue;
+			}
+			let NegativeSum=-(negativeInterger[i]+negativeInterger[j]);
+			//去找是否有相等的值
+			for (let k=maxPositiveIndex;k>=0;k--){
+				//因为是排好序的
+				if (positiveInterger[k]<NegativeSum) {
+					//如果小于则不存在，退出
+					break;
+				}
+				if(positiveInterger[k]===NegativeSum) {
+					//如果相等
+					newArr.push([negativeInterger[i],negativeInterger[j],positiveInterger[k]]);
+					break;
+				}
+				//如果大于就往前找
+			}
+		}
+		if (positiveInterger[maxPositiveIndex]===maxSum1) {
+			maxPositiveIndex--;
+		}
+	}
+
+    //需要匹配最大负数索引边界，动态变化
+    let maxNegativeIndex=negativeInterger.length-1;
+    //最小正数和
+	let maxSum2;
+    for (let i=0;i<positiveInterger.length-1;i++){
+        //两正一负时
+        if (maxNegativeIndex===-1) {
+            //当正整数遍历完时，退出
+            break;
+        }
+        if (i>0) {
+        	if (positiveInterger[i]===positiveInterger[i-1]) {
+        		continue;
+        	}
+        }
+        maxSum2=-(positiveInterger[i]+positiveInterger[i+1]);
+        if (negativeInterger>maxSum2) {
+        	maxNegativeIndex--;
+        }
+
+        for (let j=i+1;j<positiveInterger.length;j++){
+            //计算两个负数和后取绝对值
+            if (maxNegativeIndex===-1) {
+                //当正整数遍历完时，退出
+                break;
+            }
+            if (positiveInterger[j]===positiveInterger[j+1]) {
+            	continue;
+            }
+            let PositiveSum=-(positiveInterger[i]+positiveInterger[j]);
+            //去找是否有相等的值
+            for (let k=maxNegativeIndex;k>=0;k--){
+                //因为是排好序的
+                if (negativeInterger[k]<PositiveSum) {
+                    //如果小于则不存在，退出
+                    break;
+                }
+                if(negativeInterger[k]===PositiveSum){
+                    //如果相等
+                    newArr.push([positiveInterger[i],positiveInterger[j],negativeInterger[k]]);
+                    break;
+                }
+                //如果大于，则往前查找，最大正数索引边界减一
+            }
+        }
+        if (negativeInterger===maxSum2) {
+        	//移动最大位，可以避免重复
+        	maxNegativeIndex--;
+        }
+    }
+
+	return newArr;
+};
+
+let str1=[-1,0,1,2,-1,-4,-2,-3,3,0,4];
+let result=threeSum(str1);
+console.log(result);
+```
+
+简化，直接使用双指针
+
+```
 
 ```
 
@@ -796,6 +1264,43 @@ let result=findAllConcatenatedWordsInADict(str1);
 console.log(result);
 
 
+```
+
+
+
+## 507. 完美数
+
+对于一个 正整数，如果它和除了它自身以外的所有 正因子 之和相等，我们称它为 「完美数」。
+
+给定一个 整数 n， 如果是完美数，返回 true，否则返回 false
+
+```js
+/**
+ * @param {number} num
+ * @return {boolean}
+ */
+var checkPerfectNumber = function(num) {
+	if (num===1) {return false;}
+	let sum=1;
+	for (let i=2;i<=Math.sqrt(num);i++){
+		if (i===Math.sqrt(num)) {
+			sum+=Math.sqrt(num)
+		}else{
+			if (num%i===0) {
+				sum+=i+num/i;
+			}
+		}
+	}
+	if (num===sum) {
+		return true;
+	}else{
+		return false;
+	}
+}
+
+let str1=121;
+let result=checkPerfectNumber(str1);
+console.log(result);
 ```
 
 
